tests/error/modifier_errors/captured_classical_modified_multiple.err
Error: Variable assigned in modifier block (at $FILE:13:11)
   | 
11 |             x += 1
12 |             y = 2
13 |     return x + y
   |            ^ `x` cannot be used...

Note:
   | 
10 |         with power(3):
11 |             x += 1
   |             ------ ... since it was assigned in a modifier block

Help: Variables assigned inside a modifier block are not available outside the
block

Guppy compilation failed due to 1 previous error
